--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,12 @@
-*.o
-.*.swp
-.directory
-*.qm
-*.diff
-*.mo
-.flatpak-builder
-Makefile
-antimicroX
-!share/antimicroX
-antimicroX.pro.user
-antimicroX.pro.user.*
-moc_*
-qrc_resources.cpp
-ui_*.h
-*.*~
-SDL2-*
+# Build directories
+
 build/
 build-dir/
 Build/
-CMakeLists.txt.user*
-other/antimicroX.1.gz
-other/license-template.txt
-doc/
-compile/
+
+# Changelogs
 src/Changelog
-SDL2_*
-*.kate-swp
+
+
+# IDE- related files
+.vscode
